force-app/main/default/objects/Invoice_Allocation__c/fields/Net_Funder_Discount_Amount_total__c.field-meta.xml
<CustomField>
    <fullName>Net_Funder_Discount_Amount_total__c</fullName>
    <formula>Net_Funder_discount_amount_overdue__c +  Net_Funder_discount_amount_repaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funder Discount Amount total repaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>