force-app/main/default/objects/Invoice_Allocation__c/fields/No_Cap_Overdue__c.field-meta.xml
<CustomField>
    <fullName>No_Cap_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Cap Overdue</label>
    <type>Checkbox</type>
</CustomField>