force-app/main/default/objects/Invoice_Allocation__c/fields/Overdue_day_capped__c.field-meta.xml
<CustomField>
    <fullName>Overdue_day_capped__c</fullName>
    <formula>/* the overdue is limited to 60 cap overdue days*/
if( !isBlank(Buybacked_Date__c), 0, Min( If( No_Cap_Overdue__c, 65535, 60), Invoice__r.over_due_days__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue day capped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>