force-app/main/default/objects/Invoice_Allocation__c/fields/percentage_of_requested_amount__c.field-meta.xml
<CustomField>
    <fullName>percentage_of_requested_amount__c</fullName>
    <formula>amount__c / Invoice__r.requested_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percentage of requested amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>