force-app/main/default/objects/Invoice_Allocation__c/fields/QFY__c.field-meta.xml
<CustomField>
    <fullName>QFY__c</fullName>
    <formula>CASE(YEAR(  datevalue(CreatedDate)  ), 
2007, &quot;2007&quot; , 
2008, &quot;2008&quot;, 
2009, &quot;2009&quot;, 
2010, &quot;2010&quot;, 
2011, &quot;2011&quot;, 
2012, &quot;2012&quot;, 
2013, &quot;2013&quot;, 
2014, &quot;2014&quot;, 
2015, &quot;2015&quot;, 
2016, &quot;2016&quot;, 
2017, &quot;2017&quot;, 
2018, &quot;2018&quot;, 
2019, &quot;2019&quot;, 
2020, &quot;2020&quot;, 
&quot;None&quot;) 

&amp; &quot;-&quot; 

&amp;CASE(MONTH(  datevalue(CreatedDate)  ), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QFY</label>
    <type>Text</type>
</CustomField>