force-app/main/default/objects/Invoice_Allocation__c/fields/Repaid_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Repaid_Discount_Amount__c</fullName>
    <label>Repaid Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>