force-app/main/default/objects/Invoice_Allocation__c/fields/Repaid_period_capped__c.field-meta.xml
<CustomField>
    <fullName>Repaid_period_capped__c</fullName>
    <formula>/* non null Invoice__r.actual_financing_period__c indicates that payment has been received */
  Max( If( IsPickVal( Funder_prepayment__c, &quot;Net EFDA -15days&quot;), 0, -65535),
  If( Invoice__r.actual_financing_period__c &lt;= 0, Expected_finance_period_buyback_capped__c,
Min(Invoice__r.actual_financing_period__c, Expected_finance_period_buyback_capped__c))
- Expected_funding_period_capped__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repaid period capped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>