force-app/main/default/objects/Invoice_Allocation__c/fields/Repayment_Email_to_Funders_Sent__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Email_to_Funders_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the email for the repayment of this allocation has been sent to the related funder.</description>
    <label>Repayment Email to Funders Sent</label>
    <type>Checkbox</type>
</CustomField>