force-app/main/default/objects/Invoice_Allocation__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <label>source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>