force-app/main/default/objects/Invoice_Allocation__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <formula>(Supplier_Discount_Rate__c /   Advance_rate_for_CSV__c  ) - Applied_MPR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spread Allocation / month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>