force-app/main/default/objects/Invoice_Allocation__c/fields/Spread_Allocation_Old__c.field-meta.xml
<CustomField>
    <fullName>Spread_Allocation_Old__c</fullName>
    <formula>(Supplier_Discount_Rate__c - Applied_MPR__c) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spread Allocation Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>