force-app/main/default/objects/Invoice_Allocation__c/fields/Spread_invoice_based__c.field-meta.xml
<CustomField>
    <fullName>Spread_invoice_based__c</fullName>
    <formula>Invoice__r.Spread_invoice__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spread Inv based Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>