force-app/main/default/objects/Invoice_Allocation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Repaid invoice deal closed</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>