force-app/main/default/objects/Invoice_Allocation__c/fields/Supplier_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount_Rate__c</fullName>
    <formula>Invoice__r.Total_Supplier_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Discount Rate/ Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>