force-app/main/default/objects/Invoice_Allocation__c/fields/Supplier_industry__c.field-meta.xml
<CustomField>
    <fullName>Supplier_industry__c</fullName>
    <formula>TEXT(Invoice__r.Supplier_Buyer_Map__r.Supplier__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier industry</label>
    <type>Text</type>
</CustomField>