force-app/main/default/objects/Invoice_Allocation__c/fields/Supplier_industry_value__c.field-meta.xml
<CustomField>
    <fullName>Supplier_industry_value__c</fullName>
    <label>Supplier industry value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>