force-app/main/default/objects/Invoice_Allocation__c/fields/Test_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Test_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Workflow</label>
    <type>Checkbox</type>
</CustomField>