force-app/main/default/objects/Invoice_Allocation__c/fields/Total_commission__c.field-meta.xml
<CustomField>
    <fullName>Total_commission__c</fullName>
    <formula>Funder_Agent_Commission_Amount__c +  Incomlend_commision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>