force-app/main/default/objects/Invoice_Allocation__c/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <label>Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicorp Escrow</fullName>
            </value>
            <value>
                <fullName>Amicorp Trust</fullName>
                <default>true</default>
                <label>Amicorp Trust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>