force-app/main/default/objects/Invoice_Allocation__c/validationRules/buyback_option.validationRule-meta.xml
<ValidationRule>
    <fullName>buyback_option</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(isBlank(Buyback_Enter_Date__c)), NOT(isBlank(Buybacked_Date__c)))</errorConditionFormula>
    <errorDisplayField>Buyback_Enter_Date__c</errorDisplayField>
    <errorMessage>Can only input either this or Buyback Close Date and not both</errorMessage>
</ValidationRule>