force-app/main/default/objects/Invoice_Allocation__c/validationRules/cant_buy_less_than_marketplace_min.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_buy_less_than_marketplace_min</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( CreatedDate),amount__c &lt; marketplace_Min_purchase_amount__c,FALSE)</errorConditionFormula>
    <errorDisplayField>amount__c</errorDisplayField>
    <errorMessage>Amount is less than marketplace minimum amount</errorMessage>
</ValidationRule>