force-app/main/default/objects/Invoice_Allocation__c/validationRules/cant_buy_less_than_min_with_remaining.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_buy_less_than_min_with_remaining</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( CreatedDate),
amount__c &lt; IF(( (Invoice__r.remaining_amount__c  -  marketplace_Min_purchase_amount__c)  &lt;  marketplace_Min_purchase_amount__c ), Invoice__r.remaining_amount__c, marketplace_Min_purchase_amount__c)
,FALSE)</errorConditionFormula>
    <errorMessage>Requested reservation amount is not available(e1)</errorMessage>
</ValidationRule>