force-app/main/default/objects/Invoice_Allocation__c/validationRules/cant_buy_more_than_remaining_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_buy_more_than_remaining_amount</fullName>
    <active>true</active>
    <description>Cannot buy amount more than remaining amount</description>
    <errorConditionFormula>IF( ISBLANK( CreatedDate),amount__c  &gt;  Invoice__r.remaining_amount__c + Invoice__r.Sum_Of_All_Pre_Reservations__c,FALSE)</errorConditionFormula>
    <errorMessage>Requested reservation amount is not available(e2)</errorMessage>
</ValidationRule>