force-app/main/default/objects/Invoice_Allocation__c/validationRules/financing_period_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>financing_period_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Or( Buybacked_Date__c &lt; Invoice__r.advance_send_to_supplier_date__c, Buybacked_Date__c &lt; DateValue(Allocation_Reservation_date__c))</errorConditionFormula>
    <errorDisplayField>Buybacked_Date__c</errorDisplayField>
    <errorMessage>This has to be after Invoice&apos;s advance amount credited to ewallet date and Allocation Reservation date</errorMessage>
</ValidationRule>