force-app/main/default/objects/Invoice_Allocation__c/validationRules/HKD_ewallet_check.validationRule-meta.xml
<ValidationRule>
    <fullName>HKD_ewallet_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( CreatedDate),
( (ISPICKVAL(CCY__c, &quot;HKD&quot;) )  &amp;&amp;  (  amount__c  &gt;   Funder__r.HKD_Available_eWallet__c   )  )
,FALSE)</errorConditionFormula>
    <errorMessage>You do not have available funds in your eWallet</errorMessage>
</ValidationRule>