force-app/main/default/objects/Invoice_Allocation__c/validationRules/Invalid_Applied_MPR.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Applied_MPR</fullName>
    <active>true</active>
    <errorConditionFormula>Applied_MPR__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Applied_MPR__c</errorDisplayField>
    <errorMessage>Invalid</errorMessage>
</ValidationRule>