force-app/main/default/objects/Invoice_Allocation__c/validationRules/USD_ewallet_check.validationRule-meta.xml
<ValidationRule>
    <fullName>USD_ewallet_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( CreatedDate),
( (ISPICKVAL(CCY__c, &quot;USD&quot;) )  &amp;&amp;  (  amount__c  &gt;  Funder__r.USD_Available_eWallet__c  )  )
,FALSE)</errorConditionFormula>
    <errorMessage>You do not have available funds in your eWallet</errorMessage>
</ValidationRule>