force-app/main/default/objects/Invoice_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>eWallet__c</columns>
    <columns>NAME</columns>
    <columns>invoice_phase__c</columns>
    <columns>Invoice__c</columns>
    <columns>CCY__c</columns>
    <columns>amount__c</columns>
    <columns>Funder__c</columns>
    <columns>percentage_of_requested_amount__c</columns>
    <columns>Buyer_name__c</columns>
    <columns>Status__c</columns>
    <columns>funder_discount_amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Expected_Repa__c</columns>
    <columns>Repaid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funder__c</field>
        <operation>equals</operation>
        <value>SHELFORD S.C.A SICAV-RAIF - Sub-Fund INCOMLEND</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>All</label>
</ListView>