force-app/main/default/objects/Invoice_Allocation__c/listViews/E_wallet_Trustee.listView-meta.xml
<ListView>
    <fullName>E_wallet_Trustee</fullName>
    <columns>NAME</columns>
    <columns>eWallet__c</columns>
    <columns>eWallet_Trustee__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eWallet_Trustee__c</field>
        <operation>equals</operation>
    </filters>
    <label>E-wallet Trustee</label>
</ListView>